@@ -1,3 +1,12 @@
+2007-02-25  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/config/_prolog.h, build/Makefiles/gmake/bcc.mak,
+	Patch from Eric Sanford to remove empty base class optimization
+	for Borland compilers.
+
+	* test/unit/vector_test.cpp: Enable VectorTest::ebo test for Borland
+	compilers.
+
 2007-02-22  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_alloc.h: Add a workaround for compilers with buggy
